preparing as a package

--- a/alona/MANIFEST.in
+++ b/alona/MANIFEST.in
@@ -1,1 +1,5 @@
-recursive-include genome *
+#include *.py
+recursive-include alona/irlbpy *
+recursive-include alona/ANN *
+recursive-include alona/markers *
+recursive-include alona/genome *
